--- a/site/css/main.css
+++ b/site/css/main.css
@@ -24,7 +24,7 @@ body.bp h1 a:visited, body.bp h2 a:visited, body.bp h3 a:visited, body.bp h4 a:v
 }
 /* line 47, ../src/main.sass */
 body.bp h1 a:hover, body.bp h1 a:active, body.bp h2 a:hover, body.bp h2 a:active, body.bp h3 a:hover, body.bp h3 a:active, body.bp h4 a:hover, body.bp h4 a:active, body.bp h5 a:hover, body.bp h5 a:active, body.bp h6 a:hover, body.bp h6 a:active {
-  color: #86adeb;
+  color: #4269a7;
 }
 /* line 49, ../src/main.sass */
 body.bp a {
@@ -37,7 +37,7 @@ body.bp a:visited {
 }
 /* line 54, ../src/main.sass */
 body.bp a:hover, body.bp a:active {
-  color: #86adeb;
+  color: #4269a7;
 }
 
 /* line 58, ../src/main.sass */
@@ -78,31 +78,35 @@ hgroup#maintitle h1, hgroup#maintitle h1 a, hgroup#maintitle h2, hgroup#maintitl
 hgroup#maintitle h1 a:hover, hgroup#maintitle h2 a:hover {
   color: #002255;
 }
+/* line 71, ../src/main.sass */
+hgroup#maintitle h2 {
+  font-size: 0.8em;
+}
 
-/* line 84, ../src/main.sass */
+/* line 86, ../src/main.sass */
 .clickable {
   cursor: pointer;
 }
 
-/* line 88, ../src/main.sass */
+/* line 90, ../src/main.sass */
 #container {
   width: span(24);
   margin: 0 auto;
 }
 
-/* line 93, ../src/main.sass */
+/* line 95, ../src/main.sass */
 a {
   text-decoration: none;
 }
 
-/* line 96, ../src/main.sass */
+/* line 98, ../src/main.sass */
 h1, h2 {
   text-align: center;
 }
 
-/* line 106, ../src/main.sass */
+/* line 108, ../src/main.sass */
 .block {
-  background-color: rgba(0, 0, 0, 0.02);
+  background-color: #e3e5ed;
   -moz-box-shadow: white 0 0 3px, rgba(0, 0, 0, 0.2) 0 0 3px inset;
   -webkit-box-shadow: white 0 0 3px, rgba(0, 0, 0, 0.2) 0 0 3px inset;
   -o-box-shadow: white 0 0 3px, rgba(0, 0, 0, 0.2) 0 0 3px inset;
@@ -114,28 +118,28 @@ h1, h2 {
   -khtml-border-radius: 5px;
   border-radius: 5px;
 }
-/* line 103, ../src/main.sass */
+/* line 105, ../src/main.sass */
 .block > * {
   padding: 20px;
 }
-/* line 108, ../src/main.sass */
+/* line 110, ../src/main.sass */
 .block:hover {
   background-color: rgba(0, 0, 0, 0.05);
 }
 
-/* line 147, ../src/main.sass */
+/* line 155, ../src/main.sass */
 #prelinks {
-  width: 600px;
+  width: 960px;
   margin: 0.5em auto;
   height: 1em;
 }
 
-/* line 153, ../src/main.sass */
+/* line 161, ../src/main.sass */
 #choixlang {
   float: left;
   font-size: 14px;
 }
-/* line 113, ../src/main.sass */
+/* line 115, ../src/main.sass */
 #choixlang a:hover {
   color: #efeff4;
   background-color: rgba(0, 0, 0, 0.3);
@@ -144,13 +148,17 @@ h1, h2 {
   -o-box-shadow: rgba(0, 0, 0, 0.3) 0 1px 3px inset, rgba(255, 255, 255, 0.3) 0 1px 3px inset;
   box-shadow: rgba(0, 0, 0, 0.3) 0 1px 3px inset, rgba(255, 255, 255, 0.3) 0 1px 3px inset;
 }
-/* line 117, ../src/main.sass */
+/* line 119, ../src/main.sass */
 #choixlang a:active {
   background-color: rgba(0, 0, 0, 0.5);
   text-shadow: 0 0 2px black;
 }
-/* line 120, ../src/main.sass */
+/* line 122, ../src/main.sass */
 #choixlang a {
+  color: #9ca1ad;
+}
+/* line 124, ../src/main.sass */
+#choixlang a, #choixlang span {
   padding: 0.2em;
   -moz-border-radius: 2ex;
   -webkit-border-radius: 2ex;
@@ -161,19 +169,28 @@ h1, h2 {
   text-align: center;
   width: 100%;
   display: inline-block;
-  color: #9ca1ad;
 }
-/* line 127, ../src/main.sass */
-#choixlang a:hover {
+/* line 130, ../src/main.sass */
+#choixlang a:hover, #choixlang span:hover {
   color: #efeff4;
 }
+/* line 132, ../src/main.sass */
+#choixlang span {
+  color: #efeff4;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.3), 0 1px 0 rgba(255, 255, 255, 0.3);
+  background-color: rgba(0, 0, 0, 0.15);
+  -moz-box-shadow: rgba(0, 0, 0, 0.3) 0 1px 3px inset, rgba(255, 255, 255, 0.3) 0 1px 3px inset;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.3) 0 1px 3px inset, rgba(255, 255, 255, 0.3) 0 1px 3px inset;
+  -o-box-shadow: rgba(0, 0, 0, 0.3) 0 1px 3px inset, rgba(255, 255, 255, 0.3) 0 1px 3px inset;
+  box-shadow: rgba(0, 0, 0, 0.3) 0 1px 3px inset, rgba(255, 255, 255, 0.3) 0 1px 3px inset;
+}
 
-/* line 157, ../src/main.sass */
+/* line 165, ../src/main.sass */
 #choixrss {
   float: right;
   font-size: 14px;
 }
-/* line 113, ../src/main.sass */
+/* line 115, ../src/main.sass */
 #choixrss a:hover {
   color: #efeff4;
   background-color: rgba(0, 0, 0, 0.3);
@@ -182,13 +199,17 @@ h1, h2 {
   -o-box-shadow: rgba(0, 0, 0, 0.3) 0 1px 3px inset, rgba(255, 255, 255, 0.3) 0 1px 3px inset;
   box-shadow: rgba(0, 0, 0, 0.3) 0 1px 3px inset, rgba(255, 255, 255, 0.3) 0 1px 3px inset;
 }
-/* line 117, ../src/main.sass */
+/* line 119, ../src/main.sass */
 #choixrss a:active {
   background-color: rgba(0, 0, 0, 0.5);
   text-shadow: 0 0 2px black;
 }
-/* line 120, ../src/main.sass */
+/* line 122, ../src/main.sass */
 #choixrss a {
+  color: #9ca1ad;
+}
+/* line 124, ../src/main.sass */
+#choixrss a, #choixrss span {
   padding: 0.2em;
   -moz-border-radius: 2ex;
   -webkit-border-radius: 2ex;
@@ -199,26 +220,35 @@ h1, h2 {
   text-align: center;
   width: 100%;
   display: inline-block;
-  color: #9ca1ad;
 }
-/* line 127, ../src/main.sass */
-#choixrss a:hover {
+/* line 130, ../src/main.sass */
+#choixrss a:hover, #choixrss span:hover {
   color: #efeff4;
 }
+/* line 132, ../src/main.sass */
+#choixrss span {
+  color: #efeff4;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.3), 0 1px 0 rgba(255, 255, 255, 0.3);
+  background-color: rgba(0, 0, 0, 0.15);
+  -moz-box-shadow: rgba(0, 0, 0, 0.3) 0 1px 3px inset, rgba(255, 255, 255, 0.3) 0 1px 3px inset;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.3) 0 1px 3px inset, rgba(255, 255, 255, 0.3) 0 1px 3px inset;
+  -o-box-shadow: rgba(0, 0, 0, 0.3) 0 1px 3px inset, rgba(255, 255, 255, 0.3) 0 1px 3px inset;
+  box-shadow: rgba(0, 0, 0, 0.3) 0 1px 3px inset, rgba(255, 255, 255, 0.3) 0 1px 3px inset;
+}
 
-/* line 161, ../src/main.sass */
+/* line 170, ../src/main.sass */
 #mainnav {
   width: 600px;
   padding: 0;
   margin: 2.5em auto;
 }
-/* line 165, ../src/main.sass */
+/* line 174, ../src/main.sass */
 #mainnav ul {
   height: 2.2ex;
   padding: 0;
   list-style-type: none;
 }
-/* line 169, ../src/main.sass */
+/* line 178, ../src/main.sass */
 #mainnav ul li {
   text-align: center;
   float: left;
@@ -226,7 +256,7 @@ h1, h2 {
   margin: 0 20px;
   font-size: 14px;
 }
-/* line 113, ../src/main.sass */
+/* line 115, ../src/main.sass */
 #mainnav ul li a:hover {
   color: #efeff4;
   background-color: rgba(0, 0, 0, 0.3);
@@ -235,13 +265,17 @@ h1, h2 {
   -o-box-shadow: rgba(0, 0, 0, 0.3) 0 1px 3px inset, rgba(255, 255, 255, 0.3) 0 1px 3px inset;
   box-shadow: rgba(0, 0, 0, 0.3) 0 1px 3px inset, rgba(255, 255, 255, 0.3) 0 1px 3px inset;
 }
-/* line 117, ../src/main.sass */
+/* line 119, ../src/main.sass */
 #mainnav ul li a:active {
   background-color: rgba(0, 0, 0, 0.5);
   text-shadow: 0 0 2px black;
 }
-/* line 120, ../src/main.sass */
+/* line 122, ../src/main.sass */
 #mainnav ul li a {
+  color: #9ca1ad;
+}
+/* line 124, ../src/main.sass */
+#mainnav ul li a, #mainnav ul li span {
   padding: 0.2em;
   -moz-border-radius: 2ex;
   -webkit-border-radius: 2ex;
@@ -252,21 +286,31 @@ h1, h2 {
   text-align: center;
   width: 100%;
   display: inline-block;
-  color: #9ca1ad;
 }
-/* line 127, ../src/main.sass */
-#mainnav ul li a:hover {
+/* line 130, ../src/main.sass */
+#mainnav ul li a:hover, #mainnav ul li span:hover {
   color: #efeff4;
 }
-/* line 176, ../src/main.sass */
+/* line 132, ../src/main.sass */
+#mainnav ul li span {
+  color: #efeff4;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.3), 0 1px 0 rgba(255, 255, 255, 0.3);
+  background-color: rgba(0, 0, 0, 0.15);
+  -moz-box-shadow: rgba(0, 0, 0, 0.3) 0 1px 3px inset, rgba(255, 255, 255, 0.3) 0 1px 3px inset;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.3) 0 1px 3px inset, rgba(255, 255, 255, 0.3) 0 1px 3px inset;
+  -o-box-shadow: rgba(0, 0, 0, 0.3) 0 1px 3px inset, rgba(255, 255, 255, 0.3) 0 1px 3px inset;
+  box-shadow: rgba(0, 0, 0, 0.3) 0 1px 3px inset, rgba(255, 255, 255, 0.3) 0 1px 3px inset;
+}
+/* line 184, ../src/main.sass */
 #mainnav ul li * {
   font-size: 1.5em;
-  font-weight: bold;
 }
 
-/* line 180, ../src/main.sass */
+/* line 187, ../src/main.sass */
 .slideshow {
-  background-color: rgba(0, 0, 0, 0.02);
+  padding: 3em;
+  margin: 3em;
+  background-color: #e3e5ed;
   -moz-box-shadow: white 0 0 3px, rgba(0, 0, 0, 0.2) 0 0 3px inset;
   -webkit-box-shadow: white 0 0 3px, rgba(0, 0, 0, 0.2) 0 0 3px inset;
   -o-box-shadow: white 0 0 3px, rgba(0, 0, 0, 0.2) 0 0 3px inset;
@@ -278,18 +322,25 @@ h1, h2 {
   -khtml-border-radius: 5px;
   border-radius: 5px;
 }
-/* line 103, ../src/main.sass */
+/* line 105, ../src/main.sass */
 .slideshow > * {
   padding: 20px;
 }
 
-/* line 183, ../src/main.sass */
+/* line 192, ../src/main.sass */
 .flush {
   clear: both;
 }
 
-/* line 186, ../src/main.sass */
+/* line 195, ../src/main.sass */
+.clean {
+  background: none;
+  border: none;
+  margin: none;
+}
+
+/* line 200, ../src/main.sass */
 #main {
-  width: 600px;
+  width: 960px;
   margin: 0 auto;
 }
