--- a/site/src/main.sass
+++ b/site/src/main.sass
@@ -184,10 +184,6 @@ $navWidth: 600px
       *
         font-size: 1.5em
 
-.slideshow
-  padding: 3em
-  margin: 3em
-  +innerblock
 
 .flush
   clear: both
@@ -200,3 +196,15 @@ $navWidth: 600px
 #main
   width: $stdWidth
   margin: 0 auto
+
+.slideshow
+  padding: 3em
+  margin: 3em
+  +innerblock
+  .inner 
+    img
+      margin: 0 3em
+    h3
+      font-size: 2.5em
+      font-weight: bold
+      color: $ycolor1
