--- a/site/css/main.css
+++ b/site/css/main.css
@@ -1,46 +1,46 @@
-/* line 33, ../src/main.sass */
+/* line 35, ../src/main.sass */
 body {
   margin: 0;
   font-family: Futura, Molengo, sans-serif;
   background: #efeff4;
 }
-/* line 37, ../src/main.sass */
+/* line 39, ../src/main.sass */
 body.bp {
   background: #efeff4;
 }
-/* line 39, ../src/main.sass */
+/* line 41, ../src/main.sass */
 body.bp h1, body.bp h2, body.bp h3, body.bp h4, body.bp h5, body.bp h6 {
   color: #60646c;
   font-weight: bold;
   letter-spacing: -0.05em;
 }
-/* line 43, ../src/main.sass */
+/* line 45, ../src/main.sass */
 body.bp h1 a, body.bp h2 a, body.bp h3 a, body.bp h4 a, body.bp h5 a, body.bp h6 a {
   color: #9ca1ad;
 }
-/* line 45, ../src/main.sass */
+/* line 47, ../src/main.sass */
 body.bp h1 a:visited, body.bp h2 a:visited, body.bp h3 a:visited, body.bp h4 a:visited, body.bp h5 a:visited, body.bp h6 a:visited {
   color: #9ca1ad;
 }
-/* line 47, ../src/main.sass */
+/* line 49, ../src/main.sass */
 body.bp h1 a:hover, body.bp h1 a:active, body.bp h2 a:hover, body.bp h2 a:active, body.bp h3 a:hover, body.bp h3 a:active, body.bp h4 a:hover, body.bp h4 a:active, body.bp h5 a:hover, body.bp h5 a:active, body.bp h6 a:hover, body.bp h6 a:active {
   color: #4269a7;
 }
-/* line 49, ../src/main.sass */
+/* line 51, ../src/main.sass */
 body.bp a {
   text-decoration: none;
   color: #60646c;
 }
-/* line 52, ../src/main.sass */
+/* line 54, ../src/main.sass */
 body.bp a:visited {
   color: #60646c;
 }
-/* line 54, ../src/main.sass */
+/* line 56, ../src/main.sass */
 body.bp a:hover, body.bp a:active {
   color: #4269a7;
 }
 
-/* line 58, ../src/main.sass */
+/* line 60, ../src/main.sass */
 * {
   -moz-transition-property: all;
   -webkit-transition-property: all;
@@ -52,7 +52,7 @@ body.bp a:hover, body.bp a:active {
   transition-duration: 0.5s;
 }
 
-/* line 61, ../src/main.sass */
+/* line 63, ../src/main.sass */
 hgroup#maintitle {
   margin: 0.5em 0;
   font-size: 2em;
@@ -68,43 +68,68 @@ hgroup#maintitle {
   background-image: -o-linear-gradient(top, #60646c, #51555c);
   background-image: linear-gradient(top, #60646c, #51555c);
 }
-/* line 65, ../src/main.sass */
+/* line 67, ../src/main.sass */
 hgroup#maintitle h1, hgroup#maintitle h1 a, hgroup#maintitle h2, hgroup#maintitle h2 a {
   font-weight: normal;
   color: #0f1011;
   text-shadow: 0 0 2px rgba(239, 239, 244, 0.5);
 }
-/* line 69, ../src/main.sass */
+/* line 71, ../src/main.sass */
 hgroup#maintitle h1 a:hover, hgroup#maintitle h2 a:hover {
   color: #002255;
 }
-/* line 71, ../src/main.sass */
+/* line 73, ../src/main.sass */
 hgroup#maintitle h2 {
   font-size: 0.8em;
 }
 
-/* line 86, ../src/main.sass */
+/* line 81, ../src/main.sass */
+#container > footer {
+  padding: 3em 0;
+  color: #0f1011;
+  text-shadow: 0 0 2px rgba(239, 239, 244, 0.5);
+  background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #60646c), color-stop(100%, #51555c));
+  background-image: -webkit-linear-gradient(top, #60646c, #51555c);
+  background-image: -moz-linear-gradient(top, #60646c, #51555c);
+  background-image: -o-linear-gradient(top, #60646c, #51555c);
+  background-image: linear-gradient(top, #60646c, #51555c);
+}
+/* line 82, ../src/main.sass */
+#container > footer * {
+  width: 960px;
+  margin: 0 auto;
+}
+/* line 85, ../src/main.sass */
+#container > footer a {
+  color: #1f2024;
+}
+/* line 87, ../src/main.sass */
+#container > footer a:hover {
+  color: #002255;
+}
+
+/* line 101, ../src/main.sass */
 .clickable {
   cursor: pointer;
 }
 
-/* line 90, ../src/main.sass */
+/* line 105, ../src/main.sass */
 #container {
   width: span(24);
   margin: 0 auto;
 }
 
-/* line 95, ../src/main.sass */
+/* line 110, ../src/main.sass */
 a {
   text-decoration: none;
 }
 
-/* line 98, ../src/main.sass */
+/* line 113, ../src/main.sass */
 h1, h2 {
   text-align: center;
 }
 
-/* line 108, ../src/main.sass */
+/* line 123, ../src/main.sass */
 .block {
   background-color: #e3e5ed;
   -moz-box-shadow: white 0 0 3px, rgba(0, 0, 0, 0.2) 0 0 3px inset;
@@ -118,28 +143,28 @@ h1, h2 {
   -khtml-border-radius: 5px;
   border-radius: 5px;
 }
-/* line 105, ../src/main.sass */
+/* line 120, ../src/main.sass */
 .block > * {
   padding: 20px;
 }
-/* line 110, ../src/main.sass */
+/* line 125, ../src/main.sass */
 .block:hover {
   background-color: rgba(0, 0, 0, 0.05);
 }
 
-/* line 155, ../src/main.sass */
+/* line 169, ../src/main.sass */
 #prelinks {
   width: 960px;
   margin: 0.5em auto;
   height: 1em;
 }
 
-/* line 161, ../src/main.sass */
+/* line 175, ../src/main.sass */
 #choixlang {
   float: left;
   font-size: 14px;
 }
-/* line 115, ../src/main.sass */
+/* line 130, ../src/main.sass */
 #choixlang a:hover {
   color: #efeff4;
   background-color: rgba(0, 0, 0, 0.3);
@@ -148,16 +173,16 @@ h1, h2 {
   -o-box-shadow: rgba(0, 0, 0, 0.3) 0 1px 3px inset, rgba(255, 255, 255, 0.3) 0 1px 3px inset;
   box-shadow: rgba(0, 0, 0, 0.3) 0 1px 3px inset, rgba(255, 255, 255, 0.3) 0 1px 3px inset;
 }
-/* line 119, ../src/main.sass */
+/* line 134, ../src/main.sass */
 #choixlang a:active {
   background-color: rgba(0, 0, 0, 0.5);
   text-shadow: 0 0 2px black;
 }
-/* line 122, ../src/main.sass */
+/* line 137, ../src/main.sass */
 #choixlang a {
   color: #9ca1ad;
 }
-/* line 124, ../src/main.sass */
+/* line 139, ../src/main.sass */
 #choixlang a, #choixlang span {
   padding: 0.2em;
   -moz-border-radius: 2ex;
@@ -170,11 +195,11 @@ h1, h2 {
   width: 100%;
   display: inline-block;
 }
-/* line 130, ../src/main.sass */
+/* line 145, ../src/main.sass */
 #choixlang a:hover, #choixlang span:hover {
   color: #efeff4;
 }
-/* line 132, ../src/main.sass */
+/* line 147, ../src/main.sass */
 #choixlang span {
   color: #efeff4;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.3), 0 1px 0 rgba(255, 255, 255, 0.3);
@@ -185,12 +210,12 @@ h1, h2 {
   box-shadow: rgba(0, 0, 0, 0.3) 0 1px 3px inset, rgba(255, 255, 255, 0.3) 0 1px 3px inset;
 }
 
-/* line 165, ../src/main.sass */
+/* line 179, ../src/main.sass */
 #choixrss {
   float: right;
   font-size: 14px;
 }
-/* line 115, ../src/main.sass */
+/* line 130, ../src/main.sass */
 #choixrss a:hover {
   color: #efeff4;
   background-color: rgba(0, 0, 0, 0.3);
@@ -199,16 +224,16 @@ h1, h2 {
   -o-box-shadow: rgba(0, 0, 0, 0.3) 0 1px 3px inset, rgba(255, 255, 255, 0.3) 0 1px 3px inset;
   box-shadow: rgba(0, 0, 0, 0.3) 0 1px 3px inset, rgba(255, 255, 255, 0.3) 0 1px 3px inset;
 }
-/* line 119, ../src/main.sass */
+/* line 134, ../src/main.sass */
 #choixrss a:active {
   background-color: rgba(0, 0, 0, 0.5);
   text-shadow: 0 0 2px black;
 }
-/* line 122, ../src/main.sass */
+/* line 137, ../src/main.sass */
 #choixrss a {
   color: #9ca1ad;
 }
-/* line 124, ../src/main.sass */
+/* line 139, ../src/main.sass */
 #choixrss a, #choixrss span {
   padding: 0.2em;
   -moz-border-radius: 2ex;
@@ -221,11 +246,11 @@ h1, h2 {
   width: 100%;
   display: inline-block;
 }
-/* line 130, ../src/main.sass */
+/* line 145, ../src/main.sass */
 #choixrss a:hover, #choixrss span:hover {
   color: #efeff4;
 }
-/* line 132, ../src/main.sass */
+/* line 147, ../src/main.sass */
 #choixrss span {
   color: #efeff4;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.3), 0 1px 0 rgba(255, 255, 255, 0.3);
@@ -236,19 +261,19 @@ h1, h2 {
   box-shadow: rgba(0, 0, 0, 0.3) 0 1px 3px inset, rgba(255, 255, 255, 0.3) 0 1px 3px inset;
 }
 
-/* line 170, ../src/main.sass */
+/* line 184, ../src/main.sass */
 #mainnav {
   width: 600px;
   padding: 0;
   margin: 2.5em auto;
 }
-/* line 174, ../src/main.sass */
+/* line 188, ../src/main.sass */
 #mainnav ul {
   height: 2.2ex;
   padding: 0;
   list-style-type: none;
 }
-/* line 178, ../src/main.sass */
+/* line 192, ../src/main.sass */
 #mainnav ul li {
   text-align: center;
   float: left;
@@ -256,7 +281,7 @@ h1, h2 {
   margin: 0 20px;
   font-size: 14px;
 }
-/* line 115, ../src/main.sass */
+/* line 130, ../src/main.sass */
 #mainnav ul li a:hover {
   color: #efeff4;
   background-color: rgba(0, 0, 0, 0.3);
@@ -265,16 +290,16 @@ h1, h2 {
   -o-box-shadow: rgba(0, 0, 0, 0.3) 0 1px 3px inset, rgba(255, 255, 255, 0.3) 0 1px 3px inset;
   box-shadow: rgba(0, 0, 0, 0.3) 0 1px 3px inset, rgba(255, 255, 255, 0.3) 0 1px 3px inset;
 }
-/* line 119, ../src/main.sass */
+/* line 134, ../src/main.sass */
 #mainnav ul li a:active {
   background-color: rgba(0, 0, 0, 0.5);
   text-shadow: 0 0 2px black;
 }
-/* line 122, ../src/main.sass */
+/* line 137, ../src/main.sass */
 #mainnav ul li a {
   color: #9ca1ad;
 }
-/* line 124, ../src/main.sass */
+/* line 139, ../src/main.sass */
 #mainnav ul li a, #mainnav ul li span {
   padding: 0.2em;
   -moz-border-radius: 2ex;
@@ -287,11 +312,11 @@ h1, h2 {
   width: 100%;
   display: inline-block;
 }
-/* line 130, ../src/main.sass */
+/* line 145, ../src/main.sass */
 #mainnav ul li a:hover, #mainnav ul li span:hover {
   color: #efeff4;
 }
-/* line 132, ../src/main.sass */
+/* line 147, ../src/main.sass */
 #mainnav ul li span {
   color: #efeff4;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.3), 0 1px 0 rgba(255, 255, 255, 0.3);
@@ -301,30 +326,30 @@ h1, h2 {
   -o-box-shadow: rgba(0, 0, 0, 0.3) 0 1px 3px inset, rgba(255, 255, 255, 0.3) 0 1px 3px inset;
   box-shadow: rgba(0, 0, 0, 0.3) 0 1px 3px inset, rgba(255, 255, 255, 0.3) 0 1px 3px inset;
 }
-/* line 184, ../src/main.sass */
+/* line 198, ../src/main.sass */
 #mainnav ul li * {
   font-size: 1.5em;
 }
 
-/* line 188, ../src/main.sass */
+/* line 202, ../src/main.sass */
 .flush {
   clear: both;
 }
 
-/* line 191, ../src/main.sass */
+/* line 205, ../src/main.sass */
 .clean {
   background: none;
   border: none;
   margin: none;
 }
 
-/* line 196, ../src/main.sass */
+/* line 210, ../src/main.sass */
 #main {
   width: 960px;
   margin: 0 auto;
 }
 
-/* line 200, ../src/main.sass */
+/* line 214, ../src/main.sass */
 .slideshow {
   padding: 3em;
   margin: 3em;
@@ -340,17 +365,23 @@ h1, h2 {
   -khtml-border-radius: 5px;
   border-radius: 5px;
 }
-/* line 105, ../src/main.sass */
+/* line 120, ../src/main.sass */
 .slideshow > * {
   padding: 20px;
 }
-/* line 205, ../src/main.sass */
+/* line 219, ../src/main.sass */
 .slideshow .inner img {
   margin: 0 3em;
 }
-/* line 207, ../src/main.sass */
+/* line 221, ../src/main.sass */
 .slideshow .inner h3 {
   font-size: 2.5em;
   font-weight: bold;
   color: #b4b8c5;
+}
+
+/* line 226, ../src/main.sass */
+.center {
+  margin: 0 auto;
+  text-align: center;
 }
