--- a/layouts/article.html
+++ b/layouts/article.html
@@ -48,7 +48,7 @@
 
 </head>
 
-<body lang="<%= language %>">
+<body lang="<%= language %>" class="<%=bodyclass%>">
   <header>
     <div id="choixrss"><%= choixrss %></div>
     <div id="choixlang"><%= choixlang %></div>
