--- a/layouts/main.html
+++ b/layouts/main.html
@@ -39,7 +39,7 @@
 
 </head>
 
-<body lang="<%= language %>" class="bp">
+<body lang="<%= language %>" class="<%=bodyclass%>">
   <div id="container">
     <header>
       <div id="prelinks">
