--- a/site/src/main.sass
+++ b/site/src/main.sass
@@ -211,17 +211,10 @@ $navWidth: 600px
   width: $stdWidth
   margin: 0 auto
 
-.slideshow
+body.std #main > article, .slideshow
   padding: 3em
   margin: 3em
   +innerblock
-  .inner 
-    img
-      margin: 0 3em
-    h3
-      font-size: 2.5em
-      font-weight: bold
-      color: $ycolor1
 
 .center
   margin: 0 auto
