This start to look something reasonable.

--- a/content/html/fr/blog.erb
+++ b/content/html/fr/blog.erb
@@ -27,7 +27,7 @@ noSubMenu: true
 %>
 
 <div id="elementblock">
-<ul>
+<ul class="menu">
 <li> <a href="#last-articles">Les <%= number_of_articles %> derniers articles </a></li>
 <li> <a href="#tagcloud">Nuage de mots clés </a></li>
 <li> <a href="#archives">Achives </a></li>
