--- a/multi/blog.erb
+++ b/multi/blog.erb
@@ -27,7 +27,7 @@ noSubMenu: true
 %>
 
 <div id="elementblock">
-<ul>
+<ul class="menu">
 en: <li> <a href="#last-articles"><%= number_of_articles %> latest articles </a> </li>
 fr: <li> <a href="#last-articles">Les <%= number_of_articles %> derniers articles </a></li>
 en: <li> <a href="#tagcloud">Tag Cloud </a></li>
