--- a/content/html/en/blog.erb
+++ b/content/html/en/blog.erb
@@ -27,7 +27,7 @@ noSubMenu: true
 %>
 
 <div id="elementblock">
-<ul>
+<ul class="menu">
 <li> <a href="#last-articles"><%= number_of_articles %> latest articles </a> </li>
 <li> <a href="#tagcloud">Tag Cloud </a></li>
 <li> <a href="#archives">Achives </a></li>
